# DepGather

./: .gitignore  CHANGELOG.md  LICENSE.md  README.md  pyproject.toml
.github/workflows/: release.yaml  test-lint.yaml
depgather/: interface.py  native.py  parse.py  pip_cli.py  sanitise.py  utils.py  uv_cli.py
depgather/models/: cyclonedx.py  defaultonnone.py  pypijson.py  spdx.py
tests/: test_native.py  test_parse.py  test_pip_cli.py  test_uv_cli.py  utils.py
tests/data/: pep631_socks.toml  pyproject.toml
tests/data/example1/: poetryv1.toml  pylock.toml  pyproject.toml  requirements.txt  setup.cfg  setup.py
tests/models/: test_cyclonedx.py  test_pypijson.py  test_spdx.py
tests/models/data/: cyclonedx.json  example.json  example_version.json  invalid_url.json  jsonpath-rw.json  requests.json  spdx.json
tests/pkgutils/: test_c14n.py  test_sanitise.py  test_subprocess_run.py
