[project]
name = "depgather"
version = "0.5.0"
description = "Get a list of deps given a pyproject.toml, uv.lock, requirements.txt etc"
authors = [{ name = "FredHappyface" }]
requires-python = ">=3.12"
readme = "README.md"
license = "mit"
classifiers = [
	"Development Status :: 5 - Production/Stable",
	"Intended Audience :: Developers",
	"Intended Audience :: Education",
	"Natural Language :: English",
	"Operating System :: OS Independent",
	"Programming Language :: Python :: Implementation :: CPython",
	"Topic :: Security",
	"Topic :: Software Development :: Libraries :: Python Modules",
	"Topic :: Utilities",
]
dependencies = [
    "loguru>=0.7.3",
    "pydantic>=2.13.4",
    "requirements-parser>=0.13.0",
    "tomli>=2.2.1",
]

[project.optional-dependencies]
uv = ["uv>=0.6.8"]

pip = ["pip>=26.0.1"]


[project.urls]
Homepage = "https://github.com/FHPythonUtils/DepGather"
Repository = "https://github.com/FHPythonUtils/DepGather"
Documentation = "https://github.com/FHPythonUtils/DepGather/blob/master/README.md"


[dependency-groups]
dev = [
	"basedpyright>=1.39.7",
	"coverage>=7.6.12",
	"pytest>=8.3.5",
	"ruff>=0.11.0",
]

[tool.ruff]
line-length = 100
indent-width = 4
target-version = "py312"
exclude = [".venv"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
	"COM812", # enforce trailing comma
	"D203",     # 
	"D212",     #  
	"D206",     # i want tabs 
	"D401",     # imperative mood
	"D1",     # temporarily ignore docstrings
	"ISC001",
	"N",      # pep8 naming
	"PLR09",  # pylint refactor too many
	"TCH",    # type check blocks
	"W191",   # ignore this to allow tabs
	"EXE002", # The file is executable but no shebang is present
]
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"**/{tests,docs,tools}/*" = [
	"D",
	"S101",
	"E402",
	"ERA001", 
	"PLR2004", # Magic value used in comparison,
]
"**/tests/data/example1/*" = [
	"ALL"
]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all" # Disallow all relative imports.

[tool.ruff.format]
indent-style = "tab"
docstring-code-format = true
line-ending = "lf"

[tool.basedpyright]
venvPath = "."
venv = ".venv"
typeCheckingMode = "standard"

[tool.tox]
legacy_tox_ini = """
[tox]
env_list =
	py314
	py313
	py312

[testenv]
deps = pytest
commands = pytest tests
"""

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
