[project]
name = "depgather"
version = "2026.0.0"
description = "Get a list of deps given a pyproject.toml, uv.lock, requirements.txt etc"
authors = [{ name = "FredHappyface" }]
requires-python = ">=3.9,<4.0"
readme = "README.md"
license = "mit"
classifiers = [

]
dependencies = [
	"appdirs>=1.4.4",
	"configurator>=3.2.0",
	"license-expression>=30.4.1",
	"loguru>=0.7.3",
	"markdown>=3.7",
	"packaging>=24.2",
	"requests>=2.32.3",
	"requests-cache>=1.2.1",
	"requirements-parser>=0.11.0",
	"rich>=13.9.4",
	"tomli>=2.2.1",
	"uv>=0.6.8",
]


[dependency-groups]
dev = [
	"basedpyright>=1.39.7",
	"coverage>=7.6.12",
	"pytest>=8.3.5",
	"pytest-loguru>=0.4.0",
	"ruff>=0.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
