[project]
name = "depgather"
version = "0.3.0"
description = "Get a list of deps given a pyproject.toml, uv.lock, requirements.txt etc"
authors = [{ name = "FredHappyface" }]
requires-python = ">=3.12"
dependencies = ["requirements-parser>=0.13.0", "tomli>=2.2.1"]

[project.optional-dependencies]
uv = ["uv>=0.6.8"]

pip = ["pip>=26.0.1"]

[dependency-groups]
dev = [
	"basedpyright>=1.39.7",
	"coverage>=7.6.12",
	"pytest>=8.3.5",
	"ruff>=0.11.0",
]